--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,6 +14,7 @@
   </ion-header>
 
   <div id="container">
-    <ion-button expand="full" (click)="recordVideo()" > Pick Video </ion-button>
+    <ion-button expand="full" (click)="pickVideo()" > Pick Video </ion-button>
+    <ion-button expand="full" (click)="recordVideo()" > Record Video </ion-button>
   </div>
 </ion-content>
