remove server key

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -104,8 +104,8 @@
 
 <ion-content [fullscreen]="true" *ngIf="type == 'record'" >
 
-  <ion-button expand="block" (click)="getVideoLength()">Get video length</ion-button>
-  <br>
+  <!-- <ion-button expand="block" (click)="getVideoLength()">Get video length</ion-button>
+  <br> -->
 
   <div>
     <ion-button expand="full" (click)="recordVideo()" > Record Video </ion-button>
