--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,8 @@
       Simple Video Editor
     </ion-title>
     <ion-buttons slot="end" >
-      <ion-button routerLink="/info" >
+      <ion-button style="background: white;
+      border-radius: 50px;" routerLink="/info" >
         <img width="20px" height="20px" src="assets/image/info.png" />
       </ion-button>
     </ion-buttons>
