--- a/src/app/info/info.page.html
+++ b/src/app/info/info.page.html
@@ -19,14 +19,50 @@
     </ion-card-content>
   </ion-card>
 
+  <!-- <ion-card>
+    <ion-card-header>
+      <ion-card-title>Supporters</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <h3>Friends and Family</h3>
+
+    </ion-card-content>
+  </ion-card> -->
+
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Icon/Image Attribution</ion-card-title>
+      <ion-card-title>Feedback</ion-card-title>
+      <ion-card-subtitle>prochandru@gmail.com</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <p>If you want share your thoughts(Good , bad , Suggestions )
+        please , share me using the gmail
+      </p>
+
+    </ion-card-content>
+  </ion-card>
+
+  <!-- <ion-card>
+    <ion-card-header>
+      <ion-card-title>Donate Me</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <a href="https://www.buymeacoffee.com/ChandruBalu">Buy Me a Coffee</a>
+
+    </ion-card-content>
+  </ion-card> -->
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Donate Me</ion-card-title>
       <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
     </ion-card-header>
   
     <ion-card-content>
-      <a href="https://www.freepik.com/">Icon by Smashicons</a>
+      <a href="https://www.buymeacoffee.com/ChandruBalu">Buy Me a Coffee</a>
 
     </ion-card-content>
   </ion-card>
